--- a/safran/config/development.sphinx.conf
+++ b/safran/config/development.sphinx.conf
@@ -19,13 +19,12 @@ source article_core_0
   sql_db = safran_dev
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `articles`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `articles`.`description` AS `description`, `articles`.`description_etendue` AS `description_etendue`, `articles`.`fabricant` AS `fabricant`, `articles`.`distributeur` AS `distributeur`, `articles`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 3448190970 AS `class_crc`, GROUP_CONCAT(DISTINCT IFNULL(`tags`.`id`, '0') SEPARATOR ',') AS `tags`, GROUP_CONCAT(DISTINCT IFNULL(`taggings`.`id`, '0') SEPARATOR ',') AS `taggings`, IFNULL(`articles`.`fabricant`, '') AS `fabricant`, CRC32(`articles`.`fabricant`) AS `fabricant_facet`, `articles`.`prix_unitaire` AS `prix_unitaire` FROM `articles` LEFT OUTER JOIN `taggings` ON `taggings`.`taggable_id` = `articles`.`id` AND `taggings`.`taggable_type` = 'Article' LEFT OUTER JOIN `tags` ON `tags`.`id` = `taggings`.`tag_id` WHERE (`articles`.`id` >= $start AND `articles`.`id` <= $end) GROUP BY `articles`.`id` ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `articles`.`id` * CAST(1 AS SIGNED) + 0 AS `id` , `articles`.`description` AS `description`, `articles`.`description_etendue` AS `description_etendue`, `articles`.`fabricant` AS `fabricant`, `articles`.`distributeur` AS `distributeur`, `articles`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 3448190970 AS `class_crc`, GROUP_CONCAT(DISTINCT IFNULL(`tags`.`id`, '0') SEPARATOR ',') AS `tags`, GROUP_CONCAT(DISTINCT IFNULL(`taggings`.`id`, '0') SEPARATOR ',') AS `taggings`, CRC32(fabricant) AS `fabricant`, `articles`.`prix_unitaire` AS `prix_unitaire` FROM `articles` LEFT OUTER JOIN `taggings` ON `taggings`.`taggable_id` = `articles`.`id` AND `taggings`.`taggable_type` = 'Article' LEFT OUTER JOIN `tags` ON `tags`.`id` = `taggings`.`tag_id` WHERE (`articles`.`id` >= $start AND `articles`.`id` <= $end) GROUP BY `articles`.`id` ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `articles` 
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
   sql_attr_uint = class_crc
-  sql_attr_uint = fabricant_facet
-  sql_attr_str2ordinal = fabricant
+  sql_attr_uint = fabricant
   sql_attr_float = prix_unitaire
   sql_attr_multi = uint tags from field
   sql_attr_multi = uint taggings from field
