--- a/safran/Gemfile
+++ b/safran/Gemfile
@@ -24,7 +24,8 @@ gem 'thinking-sphinx',
 gem 'acts-as-taggable-on'
 gem 'simple_form'
 gem 'gritter'
-gem 'RedCloth'
+# gem 'RedCloth'
+gem 'will_paginate', '~> 3.0'
 
 # Use unicorn as the web server
 # gem 'unicorn'
